examples/negative/handle_leak/op_in_pure_fn.kai
# Negative fixture (#511 / effect propagation): a user-declared
# effect's op is called from a fn whose row does not include
# the effect. Typer must reject with `effect not handled: Io`.

effect Io { print_io(s: String) : Unit }

fn caller() : Int {
  Io.print_io("hi")
  0
}

fn main() : Int = caller()
